# holdem-hand-evaluator

./: .gitignore  Cargo.toml  LICENSE  Readme.md
assets/: Cargo.toml
assets/src/: constants.rs  flush_table.rs  heads_up.rs  headsup.rs  lib.rs  lookup.rs  offsets.rs
benches/: benchmark.rs
evaluator/: Cargo.toml
evaluator/benches/: benchmark.rs
evaluator/src/: card.rs  lib.rs
scripts/: Cargo.toml  Readme.md
scripts/src/: 01-offset_table.rs  01-rank_bases.rs  02-flush_table.rs  02-generate_flush_table.rs  02-lookup_tables.rs  02-offset_table.rs  03-generate_offset_table.rs  03-lookup_tables.rs  03-offset_table.rs  04-generate_lookup.rs  04-lookup_tables.rs
scripts/src/kev/: arrays.rs  evaluator.rs  mod.rs  test.rs
src/: card.rs  enumerate.rs  equity.rs  hand.rs  hand_test.rs  heads_up.rs  lib.rs
