[package]
name = "holdem-hand-evaluator-scripts"
version = "0.1.0"
authors = ["Wataru Inariba <oinari17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets", package = "holdem-hand-evaluator-assets" }

[[bin]]
name = "01-rank_bases"
path = "src/01-rank_bases.rs"

[[bin]]
name = "02-offset_table"
path = "src/02-offset_table.rs"

[[bin]]
name = "03-lookup_tables"
path = "src/03-lookup_tables.rs"
